user authentication and registration

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_CS='mongodb+srv://italofps65:gBxJq9iNysmz3bzx@cluster0.ike0f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_CS='mongodb+srv://italofps65:2HSSxXoMmaW0YDgA@cluster0.ike0f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 MONGO_DB_NAME='MyGastronomy'
